Compare channel against the contents of repositories